--- a/src/app/assets/styles/button-anchors.css
+++ b/src/app/assets/styles/button-anchors.css
@@ -30,13 +30,13 @@ button.btn-no-background + button {
 
 button[class*='has-background'] {
     font-size: 18px;
+    font-weight: 500;
     padding: 7px 18px;
     box-shadow: var(--solid-dropshadow), 0 10px 5px 0 rgba(0, 0, 0, 0.15); 
     transform: translateY(-5px);
     border-radius: 30px; 
     border: 2px solid #2B2D41;
     text-align: center;
-    width: auto !important; 
     transition: all var(--transition-speed-fast) ease-in-out;
 } 
 
