--- a/src/app/assets/styles/main.css
+++ b/src/app/assets/styles/main.css
@@ -18,7 +18,6 @@
     padding: 30px 0px;
     display: block;
     position: relative;
-    background-color: #F5F5F5;
     -webkit-transition: all var(--transition-speed) ease-out;
     transition: all var(--transition-speed) ease-out;
 	min-height: 100vh;
@@ -70,7 +69,7 @@ hr {
 }
 
 hr.thick-line {
-    height: 3px; 
+    height: 7px; 
 }
 
 table {
@@ -96,3 +95,14 @@ table {
 .has-thick-border {
     border: 3px solid var(--border-1);
 }
+
+img.logo { 
+    width: 30px; 
+    margin: -20px 10px 0 0;
+    display: inline;
+    vertical-align: top;
+}
+
+.logo + h1 { 
+    display: inline;
+} 
