--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -3,33 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monthly Budget Tracker</title> 
-</head>
-<body>  
-    <div class="main-content">
-        <div class="content-lock"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Monthly Budget Tracker - Demo</title> 
+    <link rel="shortcut icon" href="<%=require('../../../../src/app/assets/favicon/favicon.ico')%>" type="image/x-icon">
 
+</head>
+<body> 
+
+    <hr class="has-background-color-dark thick-line has-mg-bottom-0">
+    <div class="notice has-background-color-cyan has-mg-bottom-5">
+        <div class="v-col has-mg-bottom-0 has-pd-top-10 has-pd-bottom-10 has-text-center">
+            <span class="has-small-font-size"><strong>Privacy: </strong> This site uses your browser's local storage enable the use of multiple budget sheets and report generation. No personal information is collected, transmitted, or stored outside of your personal device.</span>
+        </div>
+    </div>
+    <section>
+        <div class="content-lock"> 
             <div id="banner-alerts"></div>
             <header>
                 <div class="h-row">
-                    <div class="v-col lg-4 lg-x-6" >
-                        <h1>Monthly Budget Tracker</h1>
+                    <div class="v-col lg-4 lg-x-6 has-mg-bottom-10" >
+                        <div class="icon-left">
+                            <img class="logo" src="<%=require('../../../../src/app/assets/logo.svg')%>">
+                            <div style="display:inline-block"><h1 class="has-mg-bottom-0">Budget Tracker</h1><span class="has-medium-font-size">by Joshua Uzzell</span></div>
+                        </div>
+                        
                     </div>
-                    <div class="v-col lg-4 lg-x-6">
-                        <nav class="text-align-right">
-                            <ul class="inline">
-                                <!-- <li><a href="">Budget Tracker</a></li>
-                                <li><a href="">Billing Templates</a></li>
-                                <li><a href="">Reports</a></li> -->
-                            </ul>
-                        </nav>
+                    <div class="v-col lg-4 lg-x-6 has-mg-bottom-5 has-mg-top-15 has-text-right">
+                        <a href="https://github.com/jvuzzell/demo_monthly-budget-tracker" class="icon-left has-underline " type="button" data-trigger-clear-budget>
+                            <img style="margin-right: 10px; " class="icon" src="<%=require('../../../../src/app/assets/icons/github-alt.svg')%>">Project on Github
+                        </a>
                     </div>
                 </div>
             </header>
+        </div>
+    </section>
+    <section class="main-content has-pd-top-0 has-background-color-off-white">
+        <div class="content-lock">
 
             <div class="h-row">
-                <div class="v-col lg-2">
+                <div class="v-col lg-2 has-mg-bottom-0">
                     <form data-inline-template="budgetSheetSelector"> 
                         <div class="h-row">
                             <div class="v-col lg-4">
@@ -103,11 +115,9 @@
                     </div>
                 </div>
             </div> 
-            <hr>
-
             <div class="h-row">
                 <div class="v-col">
-                    <div data-inline-template="budgetSheetContainer"> 
+                    <div class="standard-card" data-inline-template="budgetSheetContainer"> 
                         <div class="h-row">
                             <div class="v-col lg-2 has-mg-bottom-40">
                                 <h2>Monthly Transactions</h2>
@@ -118,9 +128,9 @@
                             </div>
                         </div>
                         <div class="h-row">
-                            <div class="v-col">
+                            <div class="v-col ">
                                 <header data-inline-template="summaryHeader"> 
-                                    <div class="summary-columns has-text-center">
+                                    <div class="summary-columns has-text-center  has-mg-bottom-10">
                                         <div class="column has-medium-font-size has-semibold-font-weight">Categories</div>
                                         <div class="column has-medium-font-size has-semibold-font-weight">Summaries</div>
                                         <div class="column has-medium-font-size has-semibold-font-weight">Due</div>
@@ -131,6 +141,7 @@
                                         <div class="column has-medium-font-size has-semibold-font-weight">Actions</div>
                                     </div>
                                 </header> 
+                                <hr>
                             </div>
                         </div>
                         <div class="h-row">
@@ -271,26 +282,49 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="h-row" data-inline-template="budgetSheetFooter">
-                            <div class="v-col lg-6">
-                                <button class="icon-left btn-has-background-mint" type="button" data-trigger-add-summary>
-                                    <img src="<%=require('../../../../src/app/assets/icons/add.svg')%>">
-                                    Add Transaction
-                                </button>
-                            </div> 
-                            <div class="v-col lg-2 has-text-right">
-                                <button class="icon-left btn-has-background-mint" type="button" data-trigger-save-budget>
-                                    <img src="<%=require('../../../../src/app/assets/icons/add.svg')%>">
-                                    Save Budget
-                                </button>
-                            </div>
-                        </div>
-                        
                     </div>
                 </div>
             </div> 
         </div>
+    </section> 
+    <section class="sticky-footer">
+        <div class="content-lock">
+            <div class="h-row" data-inline-template="budgetSheetFooter">
+                <div class="v-col has-text-center">
+                    <button class="icon-left btn-has-background-mint" type="button" data-trigger-add-summary>
+                        <img class="icon" src="<%=require('../../../../src/app/assets/icons/add.svg')%>">
+                        Add Transaction
+                    </button>
+                <!-- </div> 
+                <div class="v-col lg-2 has-text-right"> -->
+                    <button class="icon-left btn-has-background-sandstorm" type="button" data-trigger-save-budget>
+                        <img class="icon" src="<%=require('../../../../src/app/assets/icons/floppy-disk.svg')%>">
+                        Save Budget
+                    </button>
+                    <!-- <button class="icon-left btn-has-background-watermelon" type="button" data-trigger-clear-budget>
+                        <img class="icon" src="<%=require('../../../../src/app/assets/icons/trash-can-xmark.svg')%>">
+                        Clear
+                    </button> -->
+                </div>
+            </div>
+            <hr class=" has-mg-bottom-0">
+            <div class="h-row has-pd-top-10 legal">
+                <!-- <div class="v-col has-text-center"> -->
+                <div class="v-col lg-4">
+                    &copy; 2023, Joshua Uzzell.
+                </div>
+                <div class="v-col lg-4 has-text-right">
+                    <a class="has-underline" href="https://www.linkedin.com/in/joshuauzzell" noreferrer target="_blank">LinkedIn</a>
+                    <a class="has-underline" href="https://www.npmjs.com/~jvuzzell" noreferrer target="_blank">NPM</a>
+                    <a class="has-underline" href="https://www.github.com/jvuzzell" noreferrer target="_blank">Github</a>
+                    <a class="has-underline" href="https://www.behance.net/JoshuaUzzell" noreferrer target="_blank">Behance</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div data-fly-containers>
+        
     </div>
 </body>
 </html>
