--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -75,7 +75,6 @@
                 display: none
                 
             } 
-
             .screen-overlay h1 { 
                 color: var(--cyan);
             }
@@ -194,10 +193,10 @@
                 <div class="v-col">
                     <div class="standard-card" data-inline-template="budgetSheetContainer"> 
                         <div class="h-row">
-                            <div class="v-col lg-2 has-mg-bottom-40">
-                                <h2>Monthly Transactions</h2>
+                            <div class="v-col md-2 lg-2 has-mg-bottom-0">
+                                <h2 class="budget-sheet-heading has-large-font-size">Monthly Transactions</h2>
                             </div> 
-                            <div class="v-col lg-6 has-text-right">
+                            <div class="v-col md-6 lg-6 has-text-right">
                                 <button id="expandExpandables" class="btn-no-background has-underline"><strong>+</strong> Expand Transactions</button>
                                 <button id="collapseExpandables" class="btn-no-background has-underline"><strong>-</strong> Collapse Transactions</button>
                             </div>
@@ -222,139 +221,7 @@
                         <div class="h-row">
                             <div class="v-col has-mg-bottom-0" data-summary-line-container>
 
-                                <div data-inline-template="summaryLine" data-expandable-container="expanded">
-                                    <div class="h-row">
-                                        <div class="v-col trigger-margin has-text-center has-mg-bottom-0">
-                                            <button class="btn-no-background" data-expandable-trigger="click">
-                                                <img class="icon" src="<%=require('../../../../src/app/assets/icons/caret-right.svg')%>" alt="Expand Summary Line"/>
-                                            </button>
-                                        </div>
-                                        <div class="v-col expandable-body has-mg-bottom-0"> 
-                                            <div class="h-row">
-                                                <div class="v-col has-mg-bottom-0"> 
-                                                    <form>
-                                                        <div class="summary-columns"> 
-                                                            <div class="column"> 
-                                                                <label for="transaction-codes">Transaction Code</label>
-                                                                <select name="transaction-codes" data-transaction-codes></select>
-                                                            </div>
-                                                            <div class="column">
-                                                                <label for="transaction-summary">Transaction Summary</label>
-                                                                <input type="text" name="transaction-summary" placeholder="Add transaction summary" data-transaction-summary required/>
-                                                            </div>
-                                                            <div class="column"> 
-                                                                <label for="transaction-due-date">Transaction Due Date</label>
-                                                                <input type="text" name="transaction-due-date" placeholder="1st" data-transaction-due-date disabled/>
-                                                            </div>
-                                                            <div class="column">
-                                                                <label for="income">Income</label>
-                                                                <input type="number" step=0.01 name="income" placeholder=0.00 data-income disabled/>
-                                                            </div>
-                                                            <div class="column">
-                                                                <label for="expense">Expense</label>
-                                                                <input type="number" step=0.01 name="expense" placeholder=0.00 data-expense disabled/>
-                                                            </div>
-                                                            <div class="column">
-                                                                <label for="balance">Balance</label>
-                                                                <input type="number" step=0.01 name="balance" placeholder=0.00 data-balance disabled/>
-                                                            </div>
-                                                            <div class="column">
-                                                                <label for="status">Status</label>
-                                                                <input type="text" name="status" placeholder="Pending" data-status disabled/>
-                                                            </div>
-                                                            <div class="column actions-column has-text-center">
-                                                                <button class="btn-no-background" data-delete-summary-line><img class="icon" src="<%=require('../../../../src/app/assets/icons/close.svg')%>"/></button>
-                                                            </div>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="v-col trigger-margin has-text-center has-mg-bottom-0"><!-- Placeholder --></div>
-                                        <div class="v-col expandable-body has-mg-bottom-0 has-mg-top-15">
-                                            <div data-expandable-target>
-                                                <div class="h-row">
-                                                    <div class="v-col has-mg-top-0 has-mg-bottom-10" data-transaction-line-container>
-                                                        <form class="has-mg-bottom-0 has-pd-top-10" data-inline-template="transactionLine" data-transaction-type="credit"  data-ref="ssr">
-                                                            <div class="summary-columns has-mg-bottom-5"> 
-                                                                <div class="column"><!-- placeholder --></div>
-                                                                <div class="column">
-                                                                    <label for="transaction-summary">Transaction Summary</label>
-                                                                    <input type="text" name="transaction-summary" placeholder="Add description of individual credit/debit" data-transaction-summary required/>
-                                                                </div>
-                                                                <div class="column"> 
-                                                                    <label for="transaction-due-date">Transaction Due Date</label>
-                                                                    <select name="transaction-due-date" data-transaction-due-date>
-                                                                        <option value="1" selected>1
-                                                                        <option value="2">2
-                                                                        <option value="3">3
-                                                                        <option value="4">4
-                                                                        <option value="5">5
-                                                                        <option value="6">6
-                                                                        <option value="7">7
-                                                                        <option value="8">8
-                                                                        <option value="9">9
-                                                                        <option value="10">10
-                                                                        <option value="11">11
-                                                                        <option value="12">12
-                                                                        <option value="13">13
-                                                                        <option value="14">14
-                                                                        <option value="15">15
-                                                                        <option value="16">16
-                                                                        <option value="17">17
-                                                                        <option value="18">18
-                                                                        <option value="19">19
-                                                                        <option value="20">20
-                                                                        <option value="21">21
-                                                                        <option value="22">22
-                                                                        <option value="23">23
-                                                                        <option value="24">24
-                                                                        <option value="25">25
-                                                                        <option value="26">26
-                                                                        <option value="27">27
-                                                                        <option value="28">28
-                                                                        <option value="29">29
-                                                                        <option value="30">30
-                                                                        <option value="31">31
-                                                                    </select>
-                                                                </div>
-                                                                <div class="column">
-                                                                    <label for="income">Income</label>
-                                                                    <input class="has-text-center" type="number" step=0.01 name="income" placeholder=0.00 data-income value=0.00 required/>
-                                                                </div>
-                                                                <div class="column">
-                                                                    <label for="expense">Expense</label>
-                                                                    <input class="has-text-center" type="number" step=0.01 name="expense"  placeholder=0.00 data-expense disabled />
-                                                                </div>
-                                                                <div class="column"><!-- placeholder --></div>
-                                                                <div class="column">
-                                                                    <label for="transaction-status">Status</label>
-                                                                    <select name="transaction-status" data-transaction-status>
-                                                                        <option value="pending">Pending
-                                                                        <option value="paid">Paid
-                                                                        <option value="void">Void
-                                                                        <option value="past-due">Past Due
-                                                                        <option value="adjusted">Adjusted
-                                                                    </select>
-                                                                </div>
-                                                                <div class="column actions-column has-text-center">
-                                                                    <button class="btn-no-background" data-delete-transaction-line><img class="icon" src="<%=require('../../../../src/app/assets/icons/close.svg')%>"/></button>
-                                                                </div>
-                                                            </div> 
-                                                            <hr class="has-mg-top-0 has-mg-bottom-0">
-                                                        </form>
-                                                    </div>
-                                                </div>  
-                                                <div class="h-row has-text-center" data-transaction-controls>
-                                                    <div class="v-col has-mg-top-10">
-                                                        <button class="has-underline btn-no-background" data-add-credit><strong class="no-underline">+</strong> Add Credit</button><button class="has-underline btn-no-background" data-add-debit><strong class="no-underline has-large-font-size">-</strong> Add Debit</button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                </div>
+                  
                             </div>
                         </div>
                     </div>
