Add transition speed variables

--- a/src/app/assets/styles/variables.css
+++ b/src/app/assets/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
     /* Transition Speeds */
-    --transition-slow: 500ms;
+    --transition-speed-slow-medium: 750ms;
+    --transition-speed-slow: 500ms;
     --transition-speed: 300ms; 
     --transition-speed-medium: 225ms; 
     --transition-speed-fast: 175ms; 
