--- a/src/app/components/budgetSheetSelector/component.css
+++ b/src/app/components/budgetSheetSelector/component.css
@@ -1,6 +1,5 @@
 form select[data-report-month], 
 form select[data-report-year] { 
-    width: 160px;
     background-color: transparent; 
     border-top: 0;
     border-left: 0; 
@@ -9,3 +8,19 @@ form select[data-report-year] {
     font: 22px/28px "Roboto", sans-serif;
     color: var( --secondary-color);
 } 
+
+
+@media(max-width:640px) { 
+    form select[data-report-month], 
+    form select[data-report-year]{ 
+        font: 18px/24px "Roboto", sans-serif;
+    }
+}
+
+[data-inline-template=budgetSheetSelector] .v-col:first-child {
+    max-width: 120px;
+}
+
+[data-inline-template=budgetSheetSelector] .v-col:nth-child(2) {
+    max-width: 180px;
+}
