Update mobile styling for fonts

--- a/src/app/assets/styles/font.css
+++ b/src/app/assets/styles/font.css
@@ -124,8 +124,31 @@ u, .has-underline {
 
     h2:not([class*='font-size']),
     .has-large-font-size {
-        font: 20px/26px 'Roboto', sans-serif;
+        font: 18px/26px 'Roboto', sans-serif;
         font-weight: 700;
+    }
+
+    h3:not([class*='font-size']),
+    .has-x-large-font-size {
+        font: 22px/30px 'Roboto', sans-serif;
+        font-weight: 700;
+    }
+
+    body, 
+    .v-col, 
+    ol,
+    ul,
+    dl,
+    pre,
+    address, 
+    blockquote, 
+    form input, 
+    form select, 
+    form textarea, 
+    form label, 
+    button, 
+    a { 
+        font: 12px/16px 'Roboto', sans-serif;
     }
 
     h3:not([class*='font-size']),
@@ -182,4 +205,8 @@ u, .has-underline {
 
 .has-text-no-wrap {
     white-space: nowrap;
+}
+ 
+.has-font-size-0 {
+    font-size: 0;
 }
