--- a/src/app/assets/styles/grid.css
+++ b/src/app/assets/styles/grid.css
@@ -14,28 +14,37 @@ div.h-row {
 @media (max-width: 639.98px) {
 
     .h-row {
-        margin-left: -10px;
-        margin-right: -10px;
+        margin-left: calc(var(--gutter-sm) * -1);
+        margin-right: calc(var(--gutter-sm) * -1);
     }
 
 }
 
-@media (min-width: 640px) and (max-width: 959.98px) {
+@media (min-width: 640px) and (max-width: 1279.98px) {
 
     .h-row {
-        margin-left: -10px;
-        margin-right: -10px;
+        margin-left: calc(var(--gutter-md) * -1);
+        margin-right: calc(var(--gutter-md) * -1);
     }
 
 }
 
-@media (min-width: 960px) {
+@media (min-width: 1279.98px) {
 
     .h-row {
-        margin-left: -10px;
-        margin-right: -10px;
+        margin-left: calc(var(--gutter-lg) * -1);
+        margin-right: calc(var(--gutter-lg) * -1);
     }
 
+} 
+
+@media ( min-width: 1600px ) {
+
+    .h-row {
+        margin-left: calc(var(--gutter-x-lg) * -1);
+        margin-right: calc(var(--gutter-x-lg) * -1);
+    }
+    
 }
 
 /* Columns */
@@ -61,66 +70,34 @@ div.h-row {
 @media (max-width: 639.98px) {
 
     .v-col {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: var(--gutter-sm);
+        padding-right: var(--gutter-sm);
     }
 
-    .v-col:not([class*="mg-bottom"]) {
-        margin-bottom: 20px;
-    }
+    .v-col:not([class*="mg-bottom"]) { margin-bottom: var(--vertical-spacing-sm); }
 
-    .v-col[class*="sm-1"] {
-        width: 25%;
-    }
-
-    .v-col[class*="sm-2"] {
-        width: 50%;
-    }
-
-    .v-col[class*="sm-3"] {
-        width: 75%;
-    }
-
-    .v-col[class*="sm-4"] {
-        width: 100%;
-    }
+    .v-col[class*="sm-1"] { width: calc((100% / 4) * 1); }
+    .v-col[class*="sm-2"] { width: calc((100% / 4) * 2); }
+    .v-col[class*="sm-3"] { width: calc((100% / 4) * 3); }
+    .v-col[class*="sm-4"] { width: calc((100% / 4) * 4); }
 
 }
 
 @media (min-width: 640px) {
 
     .v-col {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: var(--gutter-md);
+        padding-right: var(--gutter-md);
     }
 
-    .v-col:not([class*="mg-bottom"]) {
-        margin-bottom: 20px;
-    }
+    .v-col:not([class*="mg-bottom"]) { margin-bottom: var(--vertical-spacing-md); }
 
-    .v-col[class*="md-1"] {
-        width: 16.6%;
-    }
-
-    .v-col[class*="md-2"] {
-        width: 33.3%;
-    }
-
-    .v-col[class*="md-3"] {
-        width: 50%;
-    }
-
-    .v-col[class*="md-4"] {
-        width: 66.6%;
-    }
-
-    .v-col[class*="md-5"] {
-        width: 83.3%;
-    }
-
-    .v-col[class*="md-6"] {
-        width: 100%;
-    }
+    .v-col[class*="md-1"] { width: calc((100% / 6) * 1); }
+    .v-col[class*="md-2"] { width: calc((100% / 6) * 2); }
+    .v-col[class*="md-3"] { width: calc((100% / 6) * 3); }
+    .v-col[class*="md-4"] { width: calc((100% / 6) * 4); }
+    .v-col[class*="md-5"] { width: calc((100% / 6) * 5); }
+    .v-col[class*="md-6"] { width: calc((100% / 6) * 6); }
 
 }
 
@@ -145,45 +122,22 @@ div.h-row {
 @media (min-width: 1279.98px) {
     
     .v-col {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: var(--gutter-lg);
+        padding-right: var(--gutter-lg);
     }
 
     .v-col:not([class*="mg-bottom"]) {
-        margin-bottom: 20px;
+        margin-bottom: var(--vertical-spacing-lg);
     }
 
-    .v-col[class*="lg-1"] {
-        width: 12.5%;
-    }
-
-    .v-col[class*="lg-2"] {
-        width: 25%;
-    }
-
-    .v-col[class*="lg-3"] {
-        width: 37.5%;
-    }
-
-    .v-col[class*="lg-4"] {
-        width: 50%;
-    }
-
-    .v-col[class*="lg-5"] {
-        width: 62.5%;
-    }
-
-    .v-col[class*="lg-6"] {
-        width: 75%;
-    }
-
-    .v-col[class*="lg-7"] {
-        width: 87.5%;
-    }
-
-    .v-col[class*="lg-8"] {
-        width: 100%;
-    }
+    .v-col[class*="lg-1"] { width: calc((100% / 8) * 1); }
+    .v-col[class*="lg-2"] { width: calc((100% / 8) * 2); }
+    .v-col[class*="lg-3"] { width: calc((100% / 8) * 3); }
+    .v-col[class*="lg-4"] { width: calc((100% / 8) * 4); }
+    .v-col[class*="lg-5"] { width: calc((100% / 8) * 5); }
+    .v-col[class*="lg-6"] { width: calc((100% / 8) * 6); }
+    .v-col[class*="lg-7"] { width: calc((100% / 8) * 7); }
+    .v-col[class*="lg-8"] { width: calc((100% / 8) * 8); }
 
 }
 
@@ -193,11 +147,7 @@ div.h-row {
         width:17.1%;
     }
 
-    .h-row.uneven-6 .v-col[class*="lg-1"]:last-child {
-        width: 14.28%;
-    }
-
-    .h-row.even-6 .v-col[class*="lg-2"] {
+    .h-row.even-3 .v-col[class*="lg-2"] {
         width: 33.333%;
     }
 
@@ -210,61 +160,26 @@ div.h-row {
 @media ( min-width: 1600px ) {
 
     .v-col {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: var(--gutter-x-lg);
+        padding-right: var(--gutter-x-lg);
     }
 
     .v-col:not([class*="mg-bottom"]) {
-        margin-bottom: 20px;
+        margin-bottom: var(--vertical-spacing-x-lg);
     }
 
-    .v-col[class*="lg-x-1"] {
-        width: 8.3%;
-    }
-
-    .v-col[class*="lg-x-2"] {
-        width: 16.6%;
-    }
-
-    .v-col[class*="lg-x-3"] {
-        width: 25%;
-    }
-
-    .v-col[class*="lg-x-4"] {
-        width: 33.3%;
-    }
-
-    .v-col[class*="lg-x-5"] {
-        width: 41.6%;
-    }
-
-    .v-col[class*="lg-x-6"] {
-        width: 50%;
-    }
-
-    .v-col[class*="lg-x-7"] {
-        width: 58.3%;
-    }
-
-    .v-col[class*="lg-x-8"] {
-        width: 66.6%;
-    }
-
-    .v-col[class*="lg-x-9"] {
-        width: 75%;
-    }
-
-    .v-col[class*="lg-x-10"] {
-        width: 83.3%;
-    }
-
-    .v-col[class*="lg-x-11"] {
-        width: 91.6%;
-    }
-
-    .v-col[class*="lg-x-12"] {
-        width: 100%;
-    }
+    .v-col[class*="lg-x-1"] { width: calc((100% / 12) * 1); }
+    .v-col[class*="lg-x-2"] { width: calc((100% / 12) * 2); }
+    .v-col[class*="lg-x-3"] { width: calc((100% / 12) * 3); }
+    .v-col[class*="lg-x-4"] { width: calc((100% / 12) * 4); }
+    .v-col[class*="lg-x-5"] { width: calc((100% / 12) * 5); }
+    .v-col[class*="lg-x-6"] { width: calc((100% / 12) * 6); }
+    .v-col[class*="lg-x-7"] { width: calc((100% / 12) * 7); }
+    .v-col[class*="lg-x-8"] { width: calc((100% / 12) * 8); }
+    .v-col[class*="lg-x-9"] { width: calc((100% / 12) * 9); }
+    .v-col[class*="lg-x-10"] { width: calc((100% / 12) * 10); }
+    .v-col[class*="lg-x-11"] { width: calc((100% / 12) * 11); }
+    .v-col[class*="lg-x-12"] { width: calc((100% / 12) * 12); }
 
 }
 
